[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/World/WorldsScript.gd" type="Script" id=1]
[ext_resource path="res://Scenes/NPCs/Enemies/EnemiesController.gd" type="Script" id=2]
[ext_resource path="res://crt_material.tres" type="Material" id=3]
[ext_resource path="res://Scenes/Player/PlayerCharacter.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 60 )

[node name="World" type="Node2D"]
pause_mode = 1
script = ExtResource( 1 )

[node name="Enemies" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Environment" type="Node2D" parent="."]

[node name="ObjectiveArea" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveArea"]
shape = SubResource( 1 )

[node name="President" type="Node2D" parent="."]

[node name="ObjectiveTimer" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = ExtResource( 3 )
margin_right = 1280.0
margin_bottom = 720.0

[node name="Character" parent="." instance=ExtResource( 4 )]
[connection signal="body_entered" from="ObjectiveArea" to="." method="_on_ObjectiveArea_body_entered"]
[connection signal="timeout" from="ObjectiveTimer" to="." method="_on_ObjectiveTimer_timeout"]
